# axum-book-code

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: action.yml
axum-react-chat-app/: .dockerignore  Dockerfile  README.md
axum-react-chat-app/backend/: .env  .gitignore  Cargo.toml  Shuttle.toml
axum-react-chat-app/backend/migration/: Cargo.toml
axum-react-chat-app/backend/migration/src/: m20220101_000001_create_table.rs
axum-react-chat-app/backend/src/: main.rs  main_docker.rs
axum-react-chat-app/backend/src/api/: chat.rs  chat_room.rs  mod.rs  state.rs  user.rs
axum-react-chat-app/backend/src/db/: init.rs
axum-react-chat-app/backend/src/entities/: chat.rs  mod.rs  prelude.rs  room.rs  users.rs
axum-react-chat-app/backend/static/: index.html
axum-react-chat-app/backend/static/assets/: index-0b9b26b0.css  index-da37e6e2.js
axum-react-chat-app/frontend/: index.html  package.json  vite.config.js
axum-react-chat-app/frontend/src/: App.css  App.jsx  Chat.jsx  Enter.jsx  Rooms.jsx  main.jsx
migration/src/: m20220101_000001_create_table.rs
proxy/: Cargo.toml
proxy/src/: main.rs
ratatui-websocket/src/: main_0.rs  main_1.rs
rest-api/: .env  Cargo.toml
rest-api/migration/src/: m20220101_000001_create_table.rs
rest-api/src/: main.rs
rest-api/src/api/: auth.rs  category.rs  mod.rs  text.rs
rest-api/src/entities/: category.rs  mod.rs  prelude.rs  product.rs  users.rs
rest-api/src/utils/: jwt.rs
src/: main.rs
src/api/: auth.rs  category.rs  mod.rs  product.rs  users.rs
src/db/: mod.rs
src/utils/: app_error.rs  hash.rs  jwt.rs  mod.rs
unit-test/: Cargo.toml
unit-test/src/: main.rs
unit-test/src/db/: init.rs
websocket/: Cargo.toml
websocket/src/: main.rs  ui.rs
