[package]
name = "axum-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = "0.4.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sea-orm = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde_json = "1.0.107"
serde = "1.0.189"
dotenvy = "0.15.7"
